# RayTracing

./: .gitignore  CMakeLists.txt  README.md
image/: hit_sphere.ppm  hit_sphere_after_antialiasing.ppm
src/InOneWeekend/: hittable.h  hittable_list.h  main.cpp  sphere.h
src/common/: camera.h  colour.h  ray.h  rtweekend.h  vec3.h
